--- a/nic-configs/compute.yaml
+++ b/nic-configs/compute.yaml
@@ -41,6 +41,10 @@ parameters:
     default: 30
     description: Vlan ID for the storage network traffic.
     type: number
+  StorageMgmtNetworkVlanID:
+    default: 40
+    description: Vlan ID for the storage mgmt network traffic.
+    type: number
   TenantNetworkVlanID:
     default: 50
     description: Vlan ID for the tenant network traffic.
@@ -92,26 +96,33 @@ resources:
                   default: true
                   next_hop: {get_param: ControlPlaneDefaultRoute}
             -
-              type: ovs_bridge 
-              name: br-vlan 
-              dns_servers: {get_param: DnsServers}
-              members:
+              type: interface
+              name: p2p2
+              use_dhcp: false
+            -
+              type: vlan
+              device: p2p2
+              use_dhcp: false
+              vlan_id: {get_param: InternalApiNetworkVlanID}
+              addresses:
                 -
-                  type: interface
-                  name: p2p2 
-                  primary: true
+                  ip_netmask: {get_param: InternalApiIpSubnet}
+            -
+              type: vlan
+              device: p2p2
+              use_dhcp: false
+              vlan_id: {get_param: StorageNetworkVlanID}
+              addresses:
                 -
-                  type: vlan
-                  vlan_id: {get_param: InternalApiNetworkVlanID}
-                  addresses:
-                    -
-                      ip_netmask: {get_param: InternalApiIpSubnet}
+                  ip_netmask: {get_param: StorageIpSubnet}
+            -
+              type: vlan
+              device: p2p2
+              use_dhcp: false
+              vlan_id: {get_param: StorageMgmtNetworkVlanID}
+              addresses:
                 -
-                  type: vlan
-                  vlan_id: {get_param: StorageNetworkVlanID}
-                  addresses:
-                    -
-                      ip_netmask: {get_param: StorageIpSubnet}
+                  ip_netmask: {get_param: StorageMgmtIpSubnet}
             -
               type: ovs_bridge
               name: br-link0
