--- a/nic-configs/controller.yaml
+++ b/nic-configs/controller.yaml
@@ -98,49 +98,33 @@ resources:
                   ip_netmask: 169.254.169.254/32
                   next_hop: {get_param: EC2MetadataIp}
             -
-              type: ovs_bridge
-              name: br-ex 
-              use_dhcp: false 
-              members:
-                -
-                  type: interface
-                  name: em3 
-                  use_dhcp: false 
+              type: interface 
+              name: p2p2 
+              use_dhcp: false
+            -
+              type: vlan
+              device: p2p2
+              use_dhcp: false
+              vlan_id: {get_param: InternalApiNetworkVlanID}
               addresses:
                 -
-                  ip_netmask: {get_param: ExternalIpSubnet}
-              routes:
-                -
-                  ip_netmask: 0.0.0.0/0
-                  next_hop: {get_param: ExternalInterfaceDefaultRoute}
-                  default: true
+                  ip_netmask: {get_param: InternalApiIpSubnet}
             -
-              type: ovs_bridge
-              name: br-vlan 
-              dns_servers: {get_param: DnsServers}
-              members:
+              type: vlan
+              device: p2p2
+              use_dhcp: false
+              vlan_id: {get_param: StorageNetworkVlanID}
+              addresses:
                 -
-                  type: interface
-                  name: p2p2 
-                  primary: true
+                  ip_netmask: {get_param: StorageIpSubnet}
+            -
+              type: vlan
+              device: p2p2
+              use_dhcp: false
+              vlan_id: {get_param: StorageMgmtNetworkVlanID}
+              addresses:
                 -
-                  type: vlan
-                  vlan_id: {get_param: InternalApiNetworkVlanID}
-                  addresses:
-                    -
-                      ip_netmask: {get_param: InternalApiIpSubnet}
-                -
-                  type: vlan
-                  vlan_id: {get_param: StorageNetworkVlanID}
-                  addresses:
-                    -
-                      ip_netmask: {get_param: StorageIpSubnet}
-                -
-                  type: vlan
-                  vlan_id: {get_param: StorageMgmtNetworkVlanID}
-                  addresses:
-                    -
-                      ip_netmask: {get_param: StorageMgmtIpSubnet}
+                  ip_netmask: {get_param: StorageMgmtIpSubnet}
             - 
               type: ovs_bridge
               name: br-link0
