--- a/nic-configs/controller.yaml
+++ b/nic-configs/controller.yaml
@@ -113,25 +113,14 @@ resources:
               type: vlan
               device: p2p2
               use_dhcp: false
-              vlan_id: {get_param: StorageNetworkVlanID}
+              vlan_id: {get_param: TenantNetworkVlanID}
               addresses:
                 -
-                  ip_netmask: {get_param: StorageIpSubnet}
-            -
-              type: vlan
-              device: p2p2
-              use_dhcp: false
-              vlan_id: {get_param: StorageMgmtNetworkVlanID}
-              addresses:
-                -
-                  ip_netmask: {get_param: StorageMgmtIpSubnet}
+                  ip_netmask: {get_param: TenantIpSubnet}
             - 
               type: ovs_bridge
               name: br-link0
               use_dhcp: false
-              addresses:
-                -
-                  ip_netmask: {get_param: TenantIpSubnet}
               members:
                 -
                   type: interface
