--- a/nic-configs/compute-vxlan.yaml
+++ b/nic-configs/compute-vxlan.yaml
@@ -111,14 +111,25 @@ resources:
               type: vlan
               device: p2p2
               use_dhcp: false
-              vlan_id: {get_param: TenantNetworkVlanID}
+              vlan_id: {get_param: StorageNetworkVlanID}
               addresses:
                 -
-                  ip_netmask: {get_param: TenantIpSubnet}
+                  ip_netmask: {get_param: StorageIpSubnet}
+            -
+              type: vlan
+              device: p2p2
+              use_dhcp: false
+              vlan_id: {get_param: StorageMgmtNetworkVlanID}
+              addresses:
+                -
+                  ip_netmask: {get_param: StorageMgmtIpSubnet}
             -
               type: ovs_bridge
               name: br-link0
               use_dhcp: false
+              addresses:
+                -
+                  ip_netmask: {get_param: TenantIpSubnet}
               members:
                 -
                   type: ovs_dpdk_port
