--- a/nic-configs/controller-vxlan.yaml
+++ b/nic-configs/controller-vxlan.yaml
@@ -2,7 +2,7 @@ heat_template_version: 2015-04-30
 
 description: >
   Software Config to drive os-net-config to configure VLANs for the
-  compute role.
+  controller role.
 
 parameters:
   ControlPlaneIp:
@@ -33,6 +33,10 @@ parameters:
     default: ''
     description: IP address/subnet on the management network
     type: string
+  ExternalNetworkVlanID:
+    default: 10 
+    description: Vlan ID for the external network traffic.
+    type: number
   InternalApiNetworkVlanID:
     default: 20
     description: Vlan ID for the internal_api network traffic.
@@ -53,12 +57,13 @@ parameters:
     default: 60
     description: Vlan ID for the management network traffic.
     type: number
+  ExternalInterfaceDefaultRoute:
+    default: '10.0.0.1'
+    description: default route for the external network
+    type: string
   ControlPlaneSubnetCidr: # Override this via parameter_defaults
     default: '24'
     description: The subnet CIDR of the control plane network.
-    type: string
-  ControlPlaneDefaultRoute: # Override this via parameter_defaults
-    description: The default route of the control plane network.
     type: string
   DnsServers: # Override this via parameter_defaults
     default: []
@@ -92,12 +97,9 @@ resources:
                 -
                   ip_netmask: 169.254.169.254/32
                   next_hop: {get_param: EC2MetadataIp}
-                -
-                  default: true
-                  next_hop: {get_param: ControlPlaneDefaultRoute}
             -
-              type: interface
-              name: p2p2
+              type: interface 
+              name: p2p2 
               use_dhcp: false
             -
               type: vlan
@@ -111,48 +113,47 @@ resources:
               type: vlan
               device: p2p2
               use_dhcp: false
-              vlan_id: {get_param: TenantNetworkVlanID}
+              vlan_id: {get_param: StorageNetworkVlanID}
               addresses:
                 -
-                  ip_netmask: {get_param: TenantIpSubnet}
+                  ip_netmask: {get_param: StorageIpSubnet}
             -
+              type: vlan
+              device: p2p2
+              use_dhcp: false
+              vlan_id: {get_param: StorageMgmtNetworkVlanID}
+              addresses:
+                -
+                  ip_netmask: {get_param: StorageMgmtIpSubnet}
+            - 
               type: ovs_bridge
               name: br-link0
               use_dhcp: false
+              addresses:
+                -
+                  ip_netmask: {get_param: TenantIpSubnet}
               members:
                 -
-                  type: ovs_dpdk_port
-                  name: dpdk0
-                  members:
-                    -
-                      type: interface
-                      name: em1 
-            -
+                  type: interface
+                  name: em1 
+            - 
               type: ovs_bridge
               name: br-link1
               use_dhcp: false
               members:
                 -
-                  type: ovs_dpdk_port
-                  name: dpdk1 
-                  members:
-                    -
-                      type: interface
-                      name: em2 
-            -
+                  type: interface
+                  name: em2 
+            - 
               type: ovs_bridge
               name: br-p2p1
               use_dhcp: false
               members:
                 -
-                  type: ovs_dpdk_port
-                  name: dpdk2
-                  members:
-                    -
-                      type: interface
-                      name: p2p1 
+                  type: interface
+                  name: p2p1 
 
-
+ 
 outputs:
   OS::stack_id:
     description: The OsNetConfigImpl resource.
